<resources>
    <string name="app_name">Running user preferences</string>
    <string name="measuring_system">Measuring system</string>
    <string name="metric">metric</string>
    <string name="imperial">imperial</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="age">Age</string>
    <string name="yo">yo</string>
    <string name="mas">MAS</string>
    <string name="kmh">km/h</string>
    <string name="mph">mph</string>
    <string name="height">Height</string>
    <string name="km">km</string>
    <string name="cm">cm</string>
    <string name="mi">mi</string>
    <string name="inch">in</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>

    <string name="unknown">unknown</string>
    <string name="save">Save</string>

    <string name="home">Home</string>
    <string name="user_prefs">User preferences</string>
    <string name="content_description_user_prefs">Content description user prefs</string>
    <string name="info">Info</string>
    <string name="content_description_info">Content description info</string>
    <string name="help">Help</string>

    <string name="duration">Duration</string>
    <string name="duration_from_distance_mas">Duration from distance mas</string>
    <string name="duration_from_distance_speed">Duration from distance speed</string>
    <string name="duration_from_distance_pace">Duration from distance pace</string>

    <string name="distance">Distance</string>

    <string name="speed">Speed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="length">Length</string>
</resources>