<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.HomeFragment">

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_distance" />

</androidx.constraintlayout.widget.ConstraintLayout>