<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <TextView
        android:id="@+id/tv_ms_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:text="@string/measuring_system"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ms_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:hint="@string/unknown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ms_title" />

    <TextView
        android:id="@+id/tv_gender_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:text="@string/gender"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ms_value" />

    <TextView
        android:id="@+id/tv_gender_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:hint="@string/unknown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender_title" />

    <TextView
        android:id="@+id/tv_dob_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:text="@string/dob"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_gender_value"/>

    <TextView
        android:id="@+id/tv_dob_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:hint="@string/unknown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dob_title"/>

    <TextView
        android:id="@+id/tv_mas_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:text="@string/mas"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dob_value"/>

    <TextView
        android:id="@+id/tv_mas_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:hint="@string/unknown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mas_title"/>

    <TextView
        android:id="@+id/tv_height_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:text="@string/height"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mas_value"/>

    <TextView
        android:id="@+id/tv_height_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:hint="@string/unknown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_height_title" />

    <TextView
        android:id="@+id/tv_weight_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:hint="@string/weight"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_height_value"/>

    <TextView
        android:id="@+id/tv_weight_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/unknown"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_weight_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>