<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.duration.DurationFromDistanceSpeedFragment"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_distance_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/distance"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.kmmania.runninguserpreferences.utils.BaseTextInputEditText
            android:id="@+id/et_distance_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none|numberDecimal"
            tools:ignore="TextContrastCheck,DuplicateClickableBoundsCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_unit_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/unknown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_distance_value"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_speed_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_unit_distance">

        <com.kmmania.runninguserpreferences.utils.BaseTextInputEditText
            android:id="@+id/et_speed_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none|numberDecimal"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_unit_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/unknown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_speed_value"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_duration_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/duration"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_unit_speed"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>